kubernetes/apps/flux-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    ns: flux-system
